Feature/pware 48/file upload conversion (#44)
* PWARE-48: converted file upload areas to use file upload library