@@ -6,16 +6,16 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import uk.co.ogauthority.pwa.features.application.files.ApplicationDetailFilePurpose;
-import uk.co.ogauthority.pwa.features.application.files.PadFileService;
 import uk.co.ogauthority.pwa.features.application.summary.ApplicationSectionSummariser;
 import uk.co.ogauthority.pwa.features.application.summary.ApplicationSectionSummary;
 import uk.co.ogauthority.pwa.features.application.tasklist.api.ApplicationTask;
 import uk.co.ogauthority.pwa.features.application.tasklist.api.TaskListService;
-import uk.co.ogauthority.pwa.features.application.tasks.optionstemplate.controller.OptionsTemplateController;
-import uk.co.ogauthority.pwa.model.entity.enums.ApplicationFileLinkStatus;
+import uk.co.ogauthority.pwa.features.filemanagement.FileDocumentType;
+import uk.co.ogauthority.pwa.features.filemanagement.PadFileManagementRestController;
+import uk.co.ogauthority.pwa.features.filemanagement.PadFileManagementService;
 import uk.co.ogauthority.pwa.model.entity.pwaapplications.PwaApplicationDetail;
 import uk.co.ogauthority.pwa.model.view.sidebarnav.SidebarSectionLink;
 import uk.co.ogauthority.pwa.mvc.ReverseRouter;
@@ -24,13 +24,13 @@ import uk.co.ogauthority.pwa.mvc.ReverseRouter;
 public class OptionsTemplateSummaryService implements ApplicationSectionSummariser {
 
   private final TaskListService taskListService;
-  private final PadFileService padFileService;
+  private final PadFileManagementService padFileManagementService;
 
   @Autowired
   public OptionsTemplateSummaryService(TaskListService taskListService,
-                                       PadFileService padFileService) {
+                                       PadFileManagementService padFileManagementService) {
     this.taskListService = taskListService;
-    this.padFileService = padFileService;
+    this.padFileManagementService = padFileManagementService;
   }
 
   @Override
@@ -46,17 +46,20 @@ public class OptionsTemplateSummaryService implements ApplicationSectionSummaris
   @Override
   public ApplicationSectionSummary summariseSection(PwaApplicationDetail pwaApplicationDetail, String templateName) {
 
-    var templateFileViews = padFileService
-        .getUploadedFileViews(pwaApplicationDetail, ApplicationDetailFilePurpose.OPTIONS_TEMPLATE, ApplicationFileLinkStatus.FULL);
+    var templateFileViews = padFileManagementService
+        .getUploadedFileViews(pwaApplicationDetail, FileDocumentType.OPTIONS_TEMPLATE);
 
-    var fileView = !templateFileViews.isEmpty() ? templateFileViews.get(0) : null;
+    var fileView = !templateFileViews.isEmpty() ? templateFileViews.getFirst() : null;
 
     var sectionDisplayText = ApplicationTask.OPTIONS_TEMPLATE.getDisplayName();
     Map<String, Object> summaryModel = new HashMap<>();
     summaryModel.put("sectionDisplayText", sectionDisplayText);
     summaryModel.put("optionsTemplateFileView", fileView);
-    summaryModel.put("optionsFileDownloadUrl", ReverseRouter.route(on(OptionsTemplateController.class)
-        .handleDownload(pwaApplicationDetail.getPwaApplicationType(), pwaApplicationDetail.getMasterPwaApplicationId(), null, null)));
+
+    if (fileView != null) {
+      summaryModel.put("optionsFileDownloadUrl", ReverseRouter.route(on(PadFileManagementRestController.class)
+          .download(pwaApplicationDetail.getMasterPwaApplicationId(), UUID.fromString(fileView.getFileId()))));
+    }
 
     return new ApplicationSectionSummary(
         templateName,
